# ValuesBot

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.cursor/rules/: testing.mdc
.github/workflows/: ci.yml
bot/: bot.py  config.py  db.py  handlers.py  keyboards.py  sort.py  testflow.py  texts.py  values.py
bot/core/: sort.py  stages.py  testflow.py  values.py
bot/db/: __init__.py  _sql_loader.py  sessions_repo.py
bot/db/sql/: create_table.sql  delete_session.sql  delete_session_by_id.sql  insert_result.sql  insert_session.sql  load_latest_result.sql  load_session.sql  load_session_by_id.sql  undo_session.sql  undo_session_by_id.sql  update_last_question_message.sql  update_session.sql  upsert_session.sql
bot/db/sql/migrations/: 000_create_sessions.sql  000_initial.sql  001_add_last_question_chat_id.sql  002_add_last_question_message_id.sql
bot/handlers/: __init__.py  callbacks.py  commands.py  helpers.py
bot/services/: __init__.py  errors.py  events.py  session_service.py
bot/views/: formatting.py  keyboards.py  renderer.py  targets.py  texts.py
data/: values.json  values.txt
res/: values.json
tests/: conftest.py
tests/core/: test_sort.py  test_stages.py  test_testflow.py  test_values.py
tests/data/: test_values.py
tests/db/: test_sessions_repo.py  test_sql_loader.py
tests/fixtures/: values.json
tests/handlers/: test_callbacks.py  test_commands.py
tests/services/: test_session_service.py
tests/views/: test_formatting.py  test_keyboards.py  test_renderer.py
