[project]
name = "ValuesBot"
version = "0.1.0"
description = "Bot for psychological test"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiogram>=3.28.2",
    "aiosqlite>=0.20",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B023"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "bot.core.*",
    "bot.services.*",
    "bot.db.*",
    "bot.views.formatting",
]
strict = true

[[tool.mypy.overrides]]
module = [
    "bot.handlers.*",
    "bot.bot",
    "bot.views.renderer",
    "bot.views.targets",
]
disallow_any_explicit = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = ["arg-type", "no-untyped-def"]

[tool.coverage.run]
source = ["bot"]
omit = ["bot/bot.py", "main.py"]

[tool.coverage.report]
fail_under = 85
